<resources>
    <string name="add_button_text">Add</string>
    <string name="app_name" translatable="false">spellscan</string>
    <string name="card_name_placeholder">Card Name</string>
    <string name="card_type_placeholder">Card Type</string>
    <string name="card_set_placeholder">Card Set</string>
    <string name="clear_list">Clear List</string>
    <string name="delete">Delete</string>
    <string name="list">List</string>
    <string name="scan" translatable="false">Scan</string>
    <string name="unsupported">Unsupported</string>

    <!-- Languages -->
    <string name="de">Deutsch</string>
    <string name="en">English</string>
    <string name="fr">French</string>
    <string name="it">Italian</string>
    <string name="la">Latin</string>
    <string name="pt">Portuguese</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_and_inventory_in_one_place">Scan and Inventory in one place</string>
    <string name="create_your_account_or_sign_in_to_use_the_inventory_feature">Create your account or sign in to use the inventory feature</string>
    <string name="sign_in">Sign In</string>
    <string name="or_create_your_account_now"><u>Log in if you already have an account</u></string>
    <string name="logout">Logout</string>
    <string name="inventory_placeholder">MyCollection</string>
    <string name="totalcards_cards">%d Cards</string>
    <string name="name_a_z">Name [A-Z]</string>
    <string name="name_z_a">Name [Z-A]</string>
    <string name="creation_date_newer">Creation Date (newer)</string>
    <string name="creation_date_older">Creation Date (older)</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="scan_button_text">Scan</string>
    <string name="add_to_inventory">Add to inventory</string>
    <string name="add_to">Add to:</string>
    <string name="scan_button_content_description">Button that scans the card</string>
</resources>