<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="25dp"
    android:orientation="vertical"
    tools:context=".ui.fragment.SignInFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/scan_and_inventory_in_one_place"
        android:textSize="@dimen/title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/create_your_account_or_sign_in_to_use_the_inventory_feature"
        android:textSize="17sp" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_primary70"
            android:gravity="center"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/log_in_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:text="@string/or_create_your_account_now"
            android:textColor="@color/material_dynamic_primary70" />
    </LinearLayout>

</LinearLayout>